--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ script:
 - cd $TRAVIS_BUILD_DIR/ci/travis;
   ./install_rapidassist.sh;
 - cd $TRAVIS_BUILD_DIR/ci/travis;
+  ./extract_archives.sh;
+- cd $TRAVIS_BUILD_DIR/ci/travis;
   ./build_library.sh;
 - cd $TRAVIS_BUILD_DIR/build/bin;
   ./numbertowords_unittest || true; #do not fail build even if a test fails.
