--- a/appveyor.yml
+++ b/appveyor.yml
@@ -59,6 +59,7 @@ configuration: Release
 before_build:
 - cmd: call %APPVEYOR_BUILD_FOLDER%\ci\appveyor\install_googletest.bat
 - cmd: call %APPVEYOR_BUILD_FOLDER%\ci\appveyor\install_rapidassist.bat
+- cmd: call %APPVEYOR_BUILD_FOLDER%\ci\appveyor\extract_archives.bat
 
 build_script:
 - cmd: call %APPVEYOR_BUILD_FOLDER%\ci\appveyor\build_library.bat
