Renamed /test/french directory to /test/test_files.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,8 +25,8 @@ target_link_libraries(numbertowords_unittest PUBLIC rapidassist numbertowords ${
 # Copy test files database to target dir
 add_custom_command( TARGET numbertowords_unittest POST_BUILD
                     COMMAND ${CMAKE_COMMAND} -E copy_directory
-                    ${CMAKE_CURRENT_SOURCE_DIR}/french $<TARGET_FILE_DIR:numbertowords_unittest>/db
-                    COMMENT "Copying french database.")
+                    ${CMAKE_CURRENT_SOURCE_DIR}/test_files $<TARGET_FILE_DIR:numbertowords_unittest>/test_files
+                    COMMENT "Copying test_files database.")
 
 install(TARGETS numbertowords_unittest
         EXPORT numbertowords-targets
